# wireforge

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  _typos.toml  cliff.toml  rumdl.toml
.githooks/: pre-commit
.github/workflows/: changelog.yml  fmt.yml  lint.yml  markdown_lint.yml
crates/wrfm/: Cargo.toml  README.md
crates/wrfm/src/: lib.rs
src/: main.rs
wfrm_files/: cube.wfrm  tetrahedron.wfrm
