[package]
name = "wireforge"
version = "0.6.0"
edition = "2024"
description = "TUI based editor and viewer for .wrfm files for braille-based 3D wireframes"
readme = "README.md"
authors = ["Vaishnav Sabari Girish <vaishnav.sabari.girish@gmail.com>"]
license = "MIT"
homepage = "https://github.com/Vaishnav-Sabari-Girish/wireforge"
repository = "https://github.com/Vaishnav-Sabari-Girish/wireforge"
keywords = ["cli", "tui", "file"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
notify = "8.2.0"
ratatui = "0.30.1"
ratatui-ratty = "0.3.0"
ratatui-wireframe = "0.7.0"
wrfm = { version = "0.4.0", path = "crates/wrfm" }

[features]
default = []
ratty = ["ratatui-wireframe/ratty"]
